--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -1,3 +1,13 @@
-body {
-    background-color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.login-section {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: bisque;
 }
