Frontend <> Stylized Login Form

--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -9,5 +9,53 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: bisque;
+    background-color: #F9F7F7;
+}
+
+.login-form {
+    height: 350px;
+    width: 300px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    background-color: #DBE2EF;
+    padding: 30px 5px;
+}
+
+.login-form > h3 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size:28px;
+    color: #112D4E;
+}
+
+.login-form > button {
+    background-color: #112D4E;
+    border-radius:10px;
+    color:#DBE2EF;
+    font-size:16px;
+    font-weight:bold;
+    padding:12px 25px;
+    margin-top: 15px;
+    width: 50%;
+    border: none;
+    text-decoration:none;
+    align-self: center;
+}
+
+.login-form > button:hover {
+    background-color:#3F72AF;
+}
+
+.login-form > input {
+    height: 30px;
+    margin: 3px auto;
+    justify-content: center;
+    width: 88%;
+    gap: 15px;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 5px;
+    border: 1px solid rgb(216, 216, 216);
 }
