--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -48,7 +48,17 @@
     background-color:#3F72AF;
 }
 
-.login-form > input {
+.login-form > div {
+    display: flex;
+    width: 100%;
+    height: 120px;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: #DBE2EF;
+}
+
+.login-form > div > input {
     height: 30px;
     margin: 3px auto;
     justify-content: center;
