--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -84,4 +84,37 @@
     height: 100vh;
 }
 
+.admin-sidebar {
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    width: 15vw;
+    background-color: #DBE2EF;
+}
 
+.admin-sidebar > h1 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size:28px;
+    color: #112D4E;
+    margin: 8vh 0;
+}
+
+.tab-button {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 15px 0;
+    width: 80%;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.tab-button > img {
+    height: 24px;
+    width: 24px;
+    margin-right: 10px;
+}
