--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -71,9 +71,9 @@
 }
 
 .admin-section {
-    padding: 0 12vw;
+    padding: 0 10vw;
     height: 100vh;
-    width: 76vw;
+    width: 80vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,7 +90,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    width: 15vw;
+    width: 17vw;
     background-color: #DBE2EF;
 }
 
@@ -121,4 +121,27 @@
     height: 24px;
     width: 24px;
     margin-right: 10px;
+}
+
+.admin-profile {
+    height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    width: 17vw;
+    background-color: #DBE2EF;
+}
+
+.admin-profile > img {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+}
+
+.admin-profile > h1 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size:28px;
+    color: #112D4E;
+    margin: 8vh 0;
 }
