Frontend <> Fixed Styling Issue with Login Page

--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.logiin-section {
+.login-section {
     height: 100vh;
     width: 100vw;
     display: flex;
