Frontend <> Created SideBar Component, Tried to Fix Axios Error, Failed

--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -171,3 +171,8 @@ body {
   cursor: pointer;
   background-color: #a2a4a7;
 }
+
+.admin-profile>button #active {
+  cursor: pointer;
+  background-color: #a2a4a7;
+}
