--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -172,9 +172,51 @@ body {
   background-color: #a2a4a7;
 }
 
-.admin-profile>button #active {
-  cursor: pointer;
-  background-color: #a2a4a7;
+.admin-feed {
+  height: 100vh;
+  width: 46vw;
+  padding: 0 5vw;
 }
 
-admin-feed {}
+.admin-feed>div {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 28px;
+  color: #112D4E;
+  padding: 8vh 0;
+}
+
+.admin-feed-button {
+  background-color: #3F72AF;
+  border-radius: 10px;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 12px 20px;
+  margin-top: 15px;
+  width: 30%;
+  border: none;
+  text-decoration: none;
+  align-self: flex-end;
+}
+
+.admin-feed-button:hover {
+  background-color: #a2a4a7;
+  cursor: pointer;
+}
+
+.admin-lower-feed>div:first-child {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.admin-lower-feed>div:last-child>div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 30px;
+  padding: 10px 0;
+  background-color: #3F72AF;
+  color: #F9F7F7;
+  font-size: 18px;
+}
