--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -7,6 +7,17 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+p {
+  width: 100px;
+  text-align: center;
+}
+
 .login-section {
   height: 100vh;
   width: 100vw;
@@ -210,7 +221,7 @@ body {
   align-items: center;
 }
 
-.admin-lower-feed>div:last-child>div {
+.table-content {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -219,4 +230,13 @@ body {
   background-color: #3F72AF;
   color: #F9F7F7;
   font-size: 18px;
+}
+
+.admin-lower-feed>div:last-child>div {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px 0;
+  font-size: 18px;
+  border: solid 1px rgb(165, 165, 165);
 }
