Frontend <> Completed Admin Courses Screen

--- a/frontend/frontend-react/public/css/styles.css
+++ b/frontend/frontend-react/public/css/styles.css
@@ -200,7 +200,7 @@ p {
 .admin-feed-button {
   background-color: #3F72AF;
   border-radius: 10px;
-  color: #112D4E;
+  color: #F9F7F7;
   font-size: 16px;
   font-weight: bold;
   padding: 12px 20px;
